# prefect-notifications

./: .gitignore  README.md  docker-compose.yml
mcp/: README.md  SCHEDULING.md  main.py  pyproject.toml  pytest.ini
mcp/tests/: test_mcp_tools_simple.py  test_resources.py
prefect/: README.md  init_blocks.sh  init_flow.sh  init_minio_blocks.py  init_ntfy_blocks.py  ntfy_flow.py  ntfy_webhook.py  prefect.yaml  work-pool-template.json
tools/: README.md  init_letta.py  init_prefect.sh  requirements.txt
